<resources locale="en">
    <string name="app_name">Story App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="error_name">Name is required</string>
    <string name="error_email">Email format is wrong</string>
    <string name="error_password">Password must be at least 6 characters</string>
    <string name="welcome">Welcome</string>
    <string name="please_login">Please login to continue</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="get_started">Get started</string>
    <string name="create_account">Create an account</string>
    <string name="hint_name">Name</string>
    <string name="fill_form">Fill out the form correctly</string>
    <string name="logout">Logout</string>
    <string name="message_logout">Are you sure want to Logout?</string>
    <string name="message_close">Are you sure want to close?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Photo by %s</string>
    <string name="desc_photo_story">photo story</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_your_story">Create your story</string>
    <string name="close">Close</string>
    <string name="preview_your_image">Preview your image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="take_image_first">Take image first</string>
    <string name="fill_desc">Fill the description</string>
    <string name="date">Date</string>
    <string name="close_detail">close detail</string>
    <string name="retry">Try again</string>
    <string name="change_language">Language</string>
    <string name="maps">Maps</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="my_location">My Location</string>
    <string name="share_my_location">Share my location</string>
    <string name="success_get_current_location">Success to get current location</string>
    <string name="failed_get_current_location">Failed to get current location. Try again</string>
</resources>