<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.StoryDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="#CFCFCF"
            android:contentDescription="@string/desc_photo_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/Text.Content.Main"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_detail_photo" />

        <TextView
            android:id="@+id/tv_detail_date"
            style="@style/Text.Content"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name" />

        <TextView
            android:id="@+id/tv_detail_desc"
            style="@style/Text.Content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>